--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="background">
         <div class="dino"></div>
-       <!--<div class="cactus" style="left: 1000px;"></div>--> 
+        <div class="cactus" style="left: 1000px;"></div> 
     </div>
 </body>
 </html>
